# DEL2

./: .gitignore  Cargo.toml  README.md  bundler.toml  devenv.nix  todo.org
.github/workflows/: build.yml
src/: delay_tap.rs  editor.rs  lib.rs  main.rs  style.css  svf_simper.rs
src/editor/: dual_meter.rs
