[package]
name = "DEL2"
version = "0.1.0"
edition = "2021"
authors = ["Bart Brouns <bart@magnetophon.nl>"]
license = "AGPL-3.0-only"
homepage = "https://magnetophon.nl/DEL2"
description = "A rhythm delay with space."

[workspace]
members = ["xtask"]

[lib]
crate-type = ["cdylib"]

[dependencies]
# Remove the `assert_process_allocs` feature to allow allocations on the audio
# thread in debug builds.
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["assert_process_allocs"] }
# Uncomment the below line to disable the on-by-default VST3 feature to remove
# the GPL compatibility requirement
# nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", default-features = false, features = ["assert_process_allocs"] }
bit_mask_ring_buf = "0.5"

[profile.release]
lto = "thin"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"
