[package]
name = "DEL2"
version = "0.3.0"
edition = "2021"
authors = ["Bart Brouns <bart@magnetophon.nl>"]
license = "AGPL-3.0-only"
homepage = "https://magnetophon.nl/DEL2"
description = "The delay that you play."

[workspace]
members = ["xtask"]

[lib]
# The `lib` artifact is needed for the standalone target
crate-type = ["cdylib", "lib"]

[dependencies]
# Remove the `assert_process_allocs` feature to allow allocations on the audio
# thread in debug builds.
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["assert_process_allocs"] }
bit_mask_ring_buf = "0.5"

nih_plug_vizia = { git = "https://github.com/robbert-vdh/nih-plug.git" }
synfx-dsp     = { version = "0.5.6" }
array-init = "2.1.0"
default-boxed = { version = "0.2.0" }
simple-eq = { git = "https://github.com/m-hilgendorf/simple-eq.git" }

[profile.release]
lto = "thin"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"
